objects/Idexx_Parameter__mdt.object
<CustomObject>
    <description>Used to store the Key-Value pairs used in the external service processing</description>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Api__c</fullName>
        <label>Object_Api</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <type>TextArea</type>
    </fields>
    <label>Idexx Parameter</label>
    <pluralLabel>Idexx Parameters</pluralLabel>
</CustomObject>